<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".formactivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="377dp"
        android:layout_height="517dp"
        android:background="@drawable/white_round_border"
        android:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:ems="10"
            android:fontFamily="@font/libre_baskerville"
            android:hint="@string/visitor_s_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />

        <EditText
            android:id="@+id/txtMobile"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:ems="10"
            android:fontFamily="@font/libre_baskerville"
            android:hint="@string/visitor_mobile_no"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            app:layout_constraintVertical_bias="0.066" />

        <EditText
            android:id="@+id/txtGuests"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:ems="10"
            android:fontFamily="@font/libre_baskerville"
            android:hint="@string/no_of_guests"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMobile"
            app:layout_constraintVertical_bias="0.06999999" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:ems="10"
            android:fontFamily="@font/libre_baskerville"
            android:hint="@string/your_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGuests"
            app:layout_constraintVertical_bias="0.06999999" />

        <EditText
            android:id="@+id/txtGuestOf"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:ems="10"
            android:fontFamily="@font/libre_baskerville"
            android:hint="@string/guest_of"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            app:layout_constraintVertical_bias="0.06999999" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:ems="10"
            android:fontFamily="@font/libre_baskerville"
            android:hint="@string/date"
            android:importantForAutofill="no"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGuestOf"
            app:layout_constraintVertical_bias="0.06999999" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="325dp"
            android:layout_height="60dp"
            android:background="@drawable/round_border"
            android:fontFamily="@font/libre_baskerville"
            android:text="@string/Submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/register_for_visitor_coming_to_your_home"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="215dp"
        android:layout_height="174dp"
        android:layout_marginStart="272dp"
        android:layout_marginBottom="624dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/white_ic_blob"
        android:contentDescription="@string/blobImage" />
</androidx.constraintlayout.widget.ConstraintLayout>