<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotactivity">

    <EditText
        android:id="@+id/et_resetemail"
        android:layout_width="262dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/reset_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_image"
        app:layout_constraintVertical_bias="0.182" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="262dp"
        android:layout_height="51dp"
        android:background="@drawable/round_border"
        android:backgroundTint="@color/primary"
        android:text="@string/reset_password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_resetemail"
        app:layout_constraintVertical_bias="0.146" />

    <ImageView
        android:id="@+id/forgot_image"
        android:layout_width="210dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        app:srcCompat="@drawable/forgotpassword"
        android:contentDescription="@string/forgetpass" />

</androidx.constraintlayout.widget.ConstraintLayout>